--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,4 +15,10 @@
         android:orderInCategory="200"
         app:showAsAction="ifRoom" />
 
+    <item android:id="@+id/action_favorite"
+        android:title="@string/favorite"
+        android:icon="@drawable/ic_favorite_black_24dp"
+        android:orderInCategory="200"
+        app:showAsAction="ifRoom" />
+
 </menu>
